--- a/app/scss/_basic.scss
+++ b/app/scss/_basic.scss
@@ -11,7 +11,7 @@ html {
 
 body {
     margin: 0;
-    font-family: "TTHoves" -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "TTHoves", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     line-height: 1.5;
 }
 
