--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,6 +1,6 @@
 @include font-face("OpenSans-Regular", "OpenSans-Regular", 400);
 @include font-face("SFProDisplay-Black", "SFProDisplay-Black", 400);
-@include font-face("TTHoves-Bold", "TTHoves-Bold", 400);
-@include font-face("TTHoves-Light", "TTHoves-Light", 400);
-@include font-face("TTHoves-Medium", "TTHoves-Medium", 400);
-@include font-face("TTHoves-Regular", "TTHoves-Regular", 400);
+@include font-face("TTHoves", "TTHoves-Bold", 700);
+@include font-face("TTHoves", "TTHoves-Light", 300);
+@include font-face("TTHoves", "TTHoves-Medium", 500);
+@include font-face("TTHoves", "TTHoves-Regular", 400);
